--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "booking_app",
   "version": "0.1.0",
   "private": true,
-  "engines":{
-    "npm":"6.14.4",
-    "node":"12.16.2"
+  "engines": {
+    "npm": "6.14.4",
+    "node": "12.16.2"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "yarn": "^1.22.4"
