--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "stripe": "^8.63.0",
     "yarn": "^1.22.4"
   },
   "scripts": {
